Fix sizing on mobile, center inputs, remove :

--- a/war/src/main/less/base/layout-commons.less
+++ b/war/src/main/less/base/layout-commons.less
@@ -74,6 +74,10 @@ body {
 .app-page-body--one-column {
   --form-item-max-width: calc(85vw - 4rem);
 
+  @media screen and (max-width: 768px) {
+    --form-item-max-width: 100%;
+  }
+
   max-width: 85vw;
 
   #main-panel {
